Bug 512678 Crash during address autocomplete r+sr=bienvenu